그림, 링크 수정

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div class="py-5 bg-dark">
 	<div class="container">
 		<div class="row pt-5 border-top">
-			<div class="col-12 col-md text-light col-md-3">한국교회사아카데미 자료실 <small class="d-block mb-3 text-light"><a href="http://info.mediclassics.kr/contents/members" target="_blank" class="">한국교회사아카데미© 2020</a></small> </div>
+			<div class="col-12 col-md text-light col-md-3">한국교회사아카데미 자료실 <small class="d-block mb-3 text-light">한국교회사아카데미© 2020</small> </div>
 			<div class="col-6 col-md col-md-3">
 				<h5><b>Features</b></h5>
 				<ul class="list-unstyled">
