홈 링크 변경

--- a/_includes/navi.html
+++ b/_includes/navi.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container"> <a class="navbar-brand" href="{{site.baseurl}}">
+    <div class="container"> <a class="navbar-brand" href="{{site}}">
         <b>한국교회사아카데미 자료실</b>
       </a> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar11">
         <span class="navbar-toggler-icon"></span>
