로우그룹 빼보자

--- a/_includes/js_search.html
+++ b/_includes/js_search.html
@@ -3,8 +3,9 @@
 <!-- 헤더 고정 기능-->
 <script type="text/javascript" src="assets/js/dataTables.fixedHeader.min.js"></script>
 
-<!-- Row Group-->
+<!-- Row Group
 <script type="text/javascript" src="assets/js/dataTables.rowGroup.min.js"></script>
+-->
 
 <!-- 데이터 파일 및 테이블 만들기-->
 <script type="text/javascript" class="init" src="assets/js/booklist_data.js"></script>
