--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,37 +1,8 @@
-<div class="py-5 bg-dark">
+<div class="py-3 bg-primary">
 	<div class="container">
-		<div class="row pt-5 border-top">
-			<div class="col-12 col-md text-light col-md-3">한국교회사아카데미 자료실 <small class="d-block mb-3 text-light">한국교회사아카데미© 2020</small> </div>
-			<div class="col-6 col-md col-md-3">
-				<h5><b>Features</b></h5>
-				<ul class="list-unstyled">
-					<li>
-						<a class="text-light" href="{{site.baseurl}}/search">검색</a>
-					</li>
-				</ul>
-			</div>
-			<div class="col-6 col-md col-md-3">
-				<h5><b>Documents</b></h5>
-				<ul class="list-unstyled">
-					<li>
-						<a class="text-light" href="{{site.baseurl}}/thanks">감사의 글</a>
-					</li>
-					<li>
-						<a class="text-light" href="{{site.baseurl}}/legend">범례</a>
-					</li>
-					<li>
-						<a class="text-light" href="{{site.baseurl}}/realese">업데이트 이력</a>
-					</li>
-				</ul>
-			</div>
-			<div class="col-6 col-md col-md-3">
-				<h5><b>About</b></h5>
-				<ul class="list-unstyled">
-					<li class="text-light">
-						<a class="text-light" href="http://saenamteo.or.kr/" target="_blank">새남터 기념성당</a></li>
-					<li class="text-light">
-						<a class="text-light" href="http://www.brotherhood.or.kr/" target="_blank">한국순교복자성직수도회</a></li>
-				</ul>
+		<div class="row">
+			<div class="col-md-12 text-center">
+				<p class="mt-2 mb-0">199-1, Ichon 2-dong, Yongsan-gu, Seoul, Korea<br>© 2020. The Academy for The Korea Catholic Church History. All rights reserved.</p>
 			</div>
 		</div>
 	</div>
