--- a/_includes/navi.html
+++ b/_includes/navi.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-    <div class="container"> <a class="navbar-brand text-primary" href="#">
+    <div class="container"> <a class="navbar-brand text-primary" href="{{site}}">
         <img src="assets/images/logo.png" class="mx-auto" width="300">
       </a> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar5">
         <span class="navbar-toggler-icon"></span>
@@ -7,12 +7,12 @@
       <div class="collapse navbar-collapse" id="navbar5">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item px-2"> <a class="nav-link" href="{{site.baseurl}}/search">검색</a> </li>
-          <li class="nav-item px-2"> <a class="nav-link" href="{{site.baseurl}}/search">자료현황</a> </li>
-          <li class="nav-item px-2"> <a class="nav-link" href="{{site.baseurl}}/search">배치도</a> </li>
+          <li class="nav-item px-2"> <a class="nav-link" href="{{site.baseurl}}/status">자료현황</a> </li>
+          <li class="nav-item px-2"> <a class="nav-link" href="{{site.baseurl}}/location">배치도</a> </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"> <a class="nav-link" href="{{site.baseurl}}/search">감사의 글</a> </li>
-          <li class="nav-item px-2"> <a class="nav-link" href="{{site.baseurl}}/search">연락처</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="{{site.baseurl}}/thanks">감사의 글</a> </li>
+          <li class="nav-item px-2"> <a class="nav-link" href="{{site.baseurl}}/about">연락처</a> </li>
         </ul> <a class="btn btn-info px-2" href="#">열람신청</a>
       </div>
     </div>
