--- a/_includes/navi.html
+++ b/_includes/navi.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-    <div class="container"> <a class="navbar-brand text-primary" href="{{site}}">
+    <div class="container"> <a class="navbar-brand text-primary" href="https://brotherhood-acch.github.io/">
         <img src="assets/images/logo.png" class="mx-auto" width="300">
       </a> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar5">
         <span class="navbar-toggler-icon"></span>
