--- a/_includes/navi.html
+++ b/_includes/navi.html
@@ -12,7 +12,7 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"> <a class="nav-link" href="{{site.baseurl}}/thanks">감사의 글</a> </li>
           <li class="nav-item px-2"> <a class="nav-link" href="{{site.baseurl}}/about">연락처</a> </li>
-        </ul> <a class="btn btn-info px-2" href="https://forms.gle/7r4RbNBz77Bj2XTa7">열람신청</a>
+        </ul> <a class="btn btn-info px-2" href="https://forms.gle/7r4RbNBz77Bj2XTa7" target="_blank">열람신청</a>
       </div>
     </div>
   </nav>
