--- a/_includes/navi.html
+++ b/_includes/navi.html
@@ -10,8 +10,9 @@
           <li class="nav-item px-2"> <a class="nav-link" href="{{site.baseurl}}/guide">이용안내</a> </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"> <a class="nav-link" href="{{site.baseurl}}/link">링크</a> </li>
+          <li class="nav-item px-2"> <a class="nav-link" href="{{site.baseurl}}/link">링크</a> </li>
           <li class="nav-item px-2"> <a class="nav-link" href="{{site.baseurl}}/about">소개</a> </li>
+          <li class="nav-item px-2"> <a class="nav-link" href="{{site.baseurl}}/publish">발간자료</a> </li>
         </ul> <a class="btn btn-info px-2" href="https://forms.gle/7r4RbNBz77Bj2XTa7" target="_blank">열람신청</a>
       </div>
     </div>
