--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 text-center">
-				<p class="mt-2 mb-0">199-1, Ichon 2-dong, Yongsan-gu, Seoul, Korea<br>© 2020. The Academy for The Korea Catholic Church History. All rights reserved.</p>
+				<p class="mt-2 mb-0">80-8, Ichon-ro, Yongsan-gu, Seoul, Republic of Korea<br>© 2020. The Academy for The Korea Catholic Church History. All rights reserved.</p>
 			</div>
 		</div>
 	</div>
