--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 <meta charset="UTF-8">
 <title>{{ page.title }} | {{ site.title }}</title>
 <meta name="description" content="한국교회사와 관련된 20,000여 책의 자료가 소장되어 있습니다.">
-<meta name="keywords" content="한국교회사">
+<meta name="keywords" content="한국순교복자수도회 순교영성연구소 한국교회사 아카데미 자료실 한국교회사아카데미">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- favicon -->
